Data export datatables

--- a/_source/LigaCancer/src/sass/presence/index.scss
+++ b/_source/LigaCancer/src/sass/presence/index.scss
@@ -3,3 +3,4 @@
 @import '~select2/dist/css/select2.min.css';
 @import 'select2-theme-bootstrap4/src/build';
 @import "tempusdominus-bootstrap-4/src/sass/tempusdominus-bootstrap-4-build";
+@import '~datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css';
