--- a/_source/LigaCancer/src/sass/birthday/index.scss
+++ b/_source/LigaCancer/src/sass/birthday/index.scss
@@ -1,2 +1,3 @@
 ﻿@import '~datatables.net-bs4/css/datatables.bootstrap4.min.css';
 @import "~bootstrap-datepicker/dist/css/bootstrap-datepicker.min";
+@import '~datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css';
