--- a/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
@@ -2,7 +2,7 @@
 
 <div class="card">
     <div class="card-header" data-toggle="collapse" data-target="#familyMemberCollapse" aria-expanded="true">
-        <span class="fa fa-child"></span>Membros Familiares
+        <span class="fa fa-child"></span>Membros Familiares e Amigos
 
         <div class="card-header-actions">
             <a class="card-header-action btn-minimize" href="#">
@@ -37,6 +37,6 @@
             </a>
         </div>
 
-        <table class="table table-bordered table-striped text-center" id="familyMemberTable" aria-describedby="Tabela de membros familiares"></table>
+        <table class="table table-bordered table-striped text-center" id="familyMemberTable" aria-describedby="Tabela de membros familiares e amigos"></table>
     </div>
 </div>
