--- a/_source/LigaCancer/src/sass/patient-benefit/index.scss
+++ b/_source/LigaCancer/src/sass/patient-benefit/index.scss
@@ -1,5 +1,5 @@
-﻿@import '~datatables.net-bs4/css/datatables.bootstrap4.min.css';
+@import "~datatables.net-bs4/css/datatables.bootstrap4.min.css";
 @import "~bootstrap-datepicker/dist/css/bootstrap-datepicker.min";
-@import '~select2/dist/css/select2.min.css';
-@import 'select2-theme-bootstrap4/src/build';
-@import '~datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css';
+@import "~select2/dist/css/select2.min.css";
+@import "select2-theme-bootstrap4/src/build";
+@import "~datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css";
