--- a/_source/LigaCancer/src/sass/common/index.scss
+++ b/_source/LigaCancer/src/sass/common/index.scss
@@ -1,7 +1,8 @@
 @import "~@coreui/coreui/scss/coreui";
-@import '../common/custom';
+@import "../common/custom";
 
 $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
+
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "~@fortawesome/fontawesome-free/scss/regular";
 @import "~@fortawesome/fontawesome-free/scss/solid";
