--- a/_source/LigaCancer/src/sass/doctor/index.scss
+++ b/_source/LigaCancer/src/sass/doctor/index.scss
@@ -1,2 +1,2 @@
-﻿@import '~datatables.net-bs4/css/datatables.bootstrap4.min.css';
-@import '~datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css';
+@import "~datatables.net-bs4/css/datatables.bootstrap4.min.css";
+@import "~datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css";
