#698 added expense type crud and models for expense with user

--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -96,6 +96,17 @@
                         </a>
                     </li>
 
+
+                    @if (User.IsInRole(Roles.Admin) || User.IsInRole(Roles.Secretary))
+                    {
+                        <li class="nav-title">Configurações</li>
+                        <li class="nav-item">
+                            <a asp-action="Index" asp-controller="ExpenseType" class="nav-link">
+                                <span class="nav-icon fa fa-money-bill"></span> Tipos de Despesas
+                            </a>
+                        </li>
+                    }
+
                     @if (User.IsInRole(Roles.Admin))
                     {
                         <li class="nav-title">Administrativo</li>
