#698 added social economic feature to system

--- a/_source/LigaCancer/Views/Patient/Details.cshtml
+++ b/_source/LigaCancer/Views/Patient/Details.cshtml
@@ -296,6 +296,10 @@
                     </div>
 
                     <div class="col-12">
+                        <partial name="~/Views/PatientExpenseType/Partials/_Index.cshtml" model="new PatientExpenseTypeSearchModel(Model.PatientId)" />
+                    </div>
+
+                    <div class="col-12">
                         <partial name="~/Views/PatientBenefit/Partials/_Index.cshtml" />
                     </div>
 
