#698 added frequency to system use on expense types

--- a/_source/LigaCancer/Views/Patient/Print.cshtml
+++ b/_source/LigaCancer/Views/Patient/Print.cshtml
@@ -318,6 +318,7 @@
                         <thead>
                             <tr>
                                 <th scope="col">Despesa</th>
+                                <th scope="col">Frequência</th>
                                 <th scope="col">Valor</th>
                             </tr>
                         </thead>
@@ -326,6 +327,7 @@
                             {
                                 <tr>
                                     <td>@patientExpenseTypes.ExpenseType</td>
+                                    <td>@patientExpenseTypes.Frequency</td>
                                     <td>R$ @patientExpenseTypes.Value</td>
                                 </tr>
                             }
