--- a/_source/LigaCancer/Views/Patient/Print.cshtml
+++ b/_source/LigaCancer/Views/Patient/Print.cshtml
@@ -148,6 +148,11 @@
                 <label class="d-flex align-items-end font-weight-bold m-0 pr-2">Médicos:</label>
                 <span class="d-flex align-items-end">@string.Join(", ", Model.Doctors)</span>
             </div>
+
+            <div class="col-12 d-flex">
+                <label class="d-flex align-items-end font-weight-bold m-0 pr-2">Serviços:</label>
+                <span class="d-flex align-items-end">@string.Join(", ", Model.ServiceTypes)</span>
+            </div>
         </div>
 
         <div class="row mt-5">
