--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -105,6 +105,12 @@
                                 <span class="nav-icon fa fa-money-bill"></span> Tipos de Despesas
                             </a>
                         </li>
+
+                        <li class="nav-item">
+                            <a asp-action="Index" asp-controller="ServiceType" class="nav-link">
+                                <span class="nav-icon fa fa-notes-medical"></span> Tipos de Serviços
+                            </a>
+                        </li>
                     }
 
                     @if (User.IsInRole(Roles.Admin))
